--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@databases/pg-schema-cli": "^4.3.1",
+    "@databases/pg-typed": "^4.4.1",
+    "@types/pg": "^8.10.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
+    "pg": "^8.11.3",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
